Fix for horizontal scrollbar appearing

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -13,6 +13,10 @@
   }
 }
 
+.profile {
+  margin-right: 0px;
+}
+
 .profile-view {
   &__section {
     border: none;
